fix small name bug in companies.pug

--- a/our-experience-app/src/views/admin/companies.pug
+++ b/our-experience-app/src/views/admin/companies.pug
@@ -6,7 +6,7 @@ append scripts
   script(src="/javascripts/manage_company.js" defer)
   script.
     $(document).ready( function () {
-      $('#job_postings').DataTable();
+      $('#companies').DataTable();
     });
 
 
