added a wysiwyg editor for job description; update all view related to make use

--- a/our-experience-app/src/views/admin/create_job_modal.pug
+++ b/our-experience-app/src/views/admin/create_job_modal.pug
@@ -2,7 +2,7 @@ section.container
   button(type='button' data-bs-toggle='modal' data-bs-target='#new-post-form').btn.btn-primary Add post
 
 section(tabindex='-1')#new-post-form.modal.fade
-  div.modal-dialog
+  div.modal-dialog.modal-lg
     div.modal-content
       div.modal-header
         h5#new-post-col-form-label.modal-title New Jop Post
@@ -28,7 +28,7 @@ section(tabindex='-1')#new-post-form.modal.fade
 
           div#mb-3
             label(for="description").form-label Job Description
-            textarea(rows='3' name='description' required)#description.form-control
+            textarea(rows='3' name='description' required)#description.form-control.tiny
       div.modal-footer
           button(type='button' data-bs-dismiss='modal').btn.btn-secondary Close
           button(type='submit' form='job-form').btn.btn-primary Submit
