update to nav bar for admin to not have a dead link

--- a/our-experience-app/src/views/admin/header.pug
+++ b/our-experience-app/src/views/admin/header.pug
@@ -18,6 +18,6 @@ nav.navbar.navbar-expand-md.sticky-top.navbar-light.navbar-custom
         li.nav-item
           a.nav-link(href="/admin/companies") Manage Companies
         li.nav-item
-          a.nav-link(href="/admin/events") Manage Events
+          a.nav-link(href="#") Manage Events
         li.nav-item
           a.nav-link(href="#") Logout
