--- a/our-experience-app/src/views/partials/header.pug
+++ b/our-experience-app/src/views/partials/header.pug
@@ -18,11 +18,11 @@ nav.navbar.navbar-expand-md.sticky-top.navbar-light.navbar-custom
         li.nav-item 
           a.nav-link(href="/applications") My Applications
         li.nav-item
-          a.nav-link(href="/events/my-calendar") Calendar 
-        li.nav-item
-          a.nav-link(href="/student/upload") Profile
+          a.nav-link(href="/events/my-calendar") My Calendar 
         li.nav-item 
           a.nav-link(href="/events") Events
+        li.nav-item
+          a.nav-link(href="/student/upload") Profile
       ul.navbar-nav.ms-sm-auto
         li.nav-item.dropdown 
           a.nav-link.dropdown-toggle(href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false") Admin Options 
