--- a/our-experience-app/src/views/admin/create_job_modal.pug
+++ b/our-experience-app/src/views/admin/create_job_modal.pug
@@ -5,7 +5,7 @@ section(tabindex='-1')#new-post-form.modal.fade
   div.modal-dialog.modal-lg
     div.modal-content
       div.modal-header
-        h5#new-post-col-form-label.modal-title New Jop Post
+        h5#new-post-form-label.modal-title New Jop Post
         button(type='button' data-bs-dismiss='modal' aria-lable='Close').btn-close
 
       div.modal-body
