--- a/our-experience-app/src/views/document_list.pug
+++ b/our-experience-app/src/views/document_list.pug
@@ -31,7 +31,7 @@ block content
               a(href=`/documents/${doc.id}/view`)
                 button View 
               a(href=`/documents/${doc.id}/download`)
-                button download 
+                button Download 
               button(class='delete-document-button' data-document-id=doc.id) Delete
 
     script(src='/javascripts/deleteDocument.js')
