fixing issues with forms for adding and editting job posts

--- a/our-experience-app/src/views/admin/create_job_modal.pug
+++ b/our-experience-app/src/views/admin/create_job_modal.pug
@@ -28,7 +28,8 @@ section(tabindex='-1')#new-post-form.modal.fade
 
           div#mb-3
             label(for="description").form-label Job Description
-            textarea(rows='3' name='description' required)#description.form-control.tiny
+            div(rows='5' name='description' required)#description.form-control.tiny
+
       div.modal-footer
           button(type='button' data-bs-dismiss='modal').btn.btn-secondary Close
           button(type='submit' form='job-form').btn.btn-primary Submit
